Add angular app

--- a/src/6. AngularJS/public/css/app.css
+++ b/src/6. AngularJS/public/css/app.css
@@ -419,5 +419,28 @@ body {
   background-color: transparent;
   overflow: hidden;
   cursor: default;
-  top: 0;
+}
+.taskContainer {
+  margin: 20px auto auto auto;
+  width: 50%;
+}
+.taskContainer h2 {
+  margin: 10px;
+}
+.taskContainer .taskMenu {
+  border: solid black 1px;
+  border-radius: 3px;
+  padding: 10px;
+  margin: 10px;
+}
+.taskContainer .taskList {
+  border: solid black 1px;
+  border-radius: 3px;
+  padding: 10px;
+  margin: 10px;
+}
+.taskContainer .taskList ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: disc;
 }
