--- a/src/6. AngularJS/public/css/app.less
+++ b/src/6. AngularJS/public/css/app.less
@@ -9,5 +9,31 @@ body {
   background-color: transparent;
   overflow: hidden;
   cursor: default;
-  top: 0;
+}
+
+.taskContainer {
+  margin: 20px auto auto auto;
+  width: 50%;
+
+  h2 {
+    margin: 10px;
+  }
+
+  .taskMenu {
+    border: solid black 1px;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 10px;
+  }
+
+  .taskList {
+    .taskMenu;
+
+    ul {
+      margin-top: 0;
+      margin-bottom: 0;
+      list-style-type: disc;
+    }
+
+  }
 }
